# bk-audit

./: .code.yml  .gitignore  LICENSE.txt  readme.md  readme_en.md  release.md
src/backend/: .djangoignore  .flake8  .gitignore  .pre-commit-config.yaml  Aptfile  Dockerfile  Makefile  VERSION  app_desc.yaml  manage.py  pdm.toml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_env.txt  runtime.txt  settings.py  sitecustomize.py  urls.py  wsgi.py
src/backend/agent/skills/: README.md
src/backend/api/: base.py  constants.py  domains.py  utils.py
src/backend/api/bk_base/: constants.py  default.py  serializers.py
src/backend/api/bk_cmsi/: default.py
src/backend/api/bk_iam/: default.py
src/backend/api/bk_iam_v4/: constants.py  default.py  serializers.py
src/backend/api/bk_itsm/: default.py
src/backend/api/bk_log/: constants.py  default.py  serializers.py
src/backend/api/bk_monitor/: constants.py  default.py  serializers.py
src/backend/api/bk_paas/: default.py
src/backend/api/bk_plugins_ai_agent/: constants.py  default.py
src/backend/api/bk_plugins_ai_audit_analyse/: default.py
src/backend/api/bk_plugins_ai_audit_report/: default.py
src/backend/api/bk_sops/: constants.py  default.py
src/backend/api/bk_vision/: __init__.py  default.py
src/backend/api/user_manage/: default.py
src/backend/api/watermark/: default.py
src/backend/apps/: exceptions.py
src/backend/apps/audit/: apps.py  client.py  formatters.py  models.py  resources.py
src/backend/apps/bk_crypto/: apps.py  constants.py  crypto.py
src/backend/apps/feature/: admin.py  apps.py  constants.py  handlers.py  models.py  plugins.py  resources.py  serializers.py  urls.py  views.py
src/backend/apps/itsm/: apps.py  constants.py  resources.py  serializers.py  urls.py  views.py
src/backend/apps/meta/: admin.py  apps.py  comopents.py  constants.py  converter.py  exceptions.py  models.py  permissions.py  resources.py  serializers.py  tasks.py  urls.py
src/backend/apps/notice/: admin.py  apps.py  constants.py  exceptions.py  handlers.py  models.py  parser.py  provider.py  resources.py  serializers.py  tasks.py  urls.py  views.py
src/backend/apps/permission/: constants.py  dispatcher.py  exceptions.py  resources.py  serializers.py  urls.py  views.py
src/backend/apps/sops/: apps.py  constants.py  resources.py  serializers.py  urls.py  views.py
src/backend/apps/user_manage/: apps.py  resources.py
src/backend/blueking/: __init__.py
src/backend/blueking/component/: base.py  client.py  collections.py  conf.py  exceptions.py  shortcuts.py  utils.py
src/backend/config/: __init__.py  default.py  dev.py  prod.py  stag.py
src/backend/core/: cache.py  choices.py  connection.py  constants.py  exceptions.py  kafka.py  lock.py  log.py  models.py  monitor.py  observability.py  permissions.py  render.py  sanitiers.py  serializers.py  testing.py  view_sets.py
src/backend/core/exporter/: constants.py  export.py
src/backend/core/middleware/: csrf.py  login_exempt.py  tests.py
src/backend/core/sql/: builder.py  constants.py  exceptions.py  functions.py  model.py  sql_builder.py  terms.py
src/backend/core/utils/: cache.py  cached_pagination.py  data.py  distutils.py  environ.py  file.py  lock.py  page.py  params.py  renderers.py  retry.py  service.py  spectacular.py  time.py  tools.py  user_manage.py
src/backend/docs/: api_endpoints_env.md  log_subscription_design.md
src/backend/docs/api/: tool_config_spec.md  tool_executor_design.md
src/backend/evals/: .gitignore  README.md
src/backend/evals/nl2riskfilter/: README.md  promptfooconfig.yaml
src/backend/evals/providers/: bk_llm_provider.py
src/backend/services/puller/: settings.py  urls.py
src/backend/services/web/: settings.py  urls.py
src/backend/static/account/: login.js
src/backend/static/djcelery/: style.css
src/backend/static/js/: csrftoken.js  settings.js
src/backend/support-files/apigw/: definition.yaml  resources.yaml
src/backend/support-files/iam/: README.md  initial.json
src/backend/support-files/init-configs/: es.json  redis.json
src/backend/support-files/supervisor/: risk_worker.conf
src/backend/templates/: 403.html  500.html  base.html
src/backend/templates/admin/: base_site.html  login.html
src/backend/templates/notice/: mail.html
src/backend/tests/: __init__.py  base.py  conftest.py  constants.py
src/backend/tests/core/: test_render.py
src/backend/tests/esquery/: constants.py  test_esquery.py
src/backend/tests/meta/: constants.py  test_meta.py
src/backend/tests/permission/: test_permission.py
src/backend/tests/strategy_v2/: test_strategy.py
src/backend/tests/test_analyze/: test_aiops.py  test_aiops_flow_links.py  test_aiops_plan_sync_handler.py  test_storage_nodes.py
src/backend/tests/test_api/: test_bk_base_default.py  test_bk_iam_v4_default.py
src/backend/tests/test_bk_plugins/: constants.py  test_ai_audit_report.py  test_mcp_user_apigw_config.py
src/backend/tests/test_core/: test_api_renderer.py  test_exporter.py  test_observability.py  (+5 more)
src/backend/version_md/: V1.0.0_20221027_en.md  V1.0.0_20221027_zh-cn.md  V1.0.1_20221123_en.md  V1.0.1_20221123_zh-cn.md  V1.1.0_20221206_en.md  V1.1.0_20221206_zh-cn.md  V1.1.1_20221208_en.md  V1.1.1_20221208_zh-cn.md  V1.10.0_20240123_en.md  V1.10.0_20240123_zh-cn.md  V1.11.0_20240320_en.md  V1.11.0_20240320_zh-cn.md  V1.11.1_20240322_en.md  V1.11.1_20240322_zh-cn.md  V1.12.0_20240408_en.md  V1.12.0_20240408_zh-cn.md  V1.12.1_20240514_en.md  V1.12.1_20240514_zh-cn.md  V1.13.0_20240510_en.md  V1.13.0_20240510_zh-cn.md  V1.13.0_20240620_en.md  V1.13.0_20240620_zh-cn.md  V1.13.1_20240801_en.md  V1.13.1_20240801_zh-cn.md  V1.14.0_20240710_en.md  V1.14.0_20240710_zh-cn.md  V1.14.0_20240831_en.md  V1.14.0_20240831_zh-cn.md  V1.15.0_20240920_en.md  V1.15.0_20240920_zh-cn.md  V1.16.0_20250219_en.md  V1.16.0_20250219_zh-cn.md  V1.17.0_20250319_en.md  V1.17.0_20250319_zh-cn.md  V1.17.1_20250327_en.md  V1.17.1_20250327_zh-cn.md  V1.17.2_20250416_en.md  V1.17.2_20250416_zh-cn.md  V1.17.3_20250516_en.md  V1.17.3_20250516_zh-cn.md  (+72 more)
(+1976 files in other folders)
