[tool.black]
line-length = 120
include = '\.pyi?$'
skip-string-normalization = 'true'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
source = "."

[project]
name = "backend"
version = "1.15.0"
description = "Default template for UV package"
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "apigw-manager==2.0.0",
    "appnope==0.1.4 ; sys_platform == 'darwin'",
    "arrow==1.2.2",
    "asgiref==3.8.1",
    "asttokens==3.0.0",
    "attrs==25.1.0",
    "backcall==0.2.0",
    "backoff==2.2.1",
    "billiard==3.6.4.0",
    "bk-audit[opentelemetry]==1.2.2b0",
    "bk-crypto-python-sdk==1.1.1",
    "bk-iam==1.3.2",
    "bk-notice-sdk==1.1.1",
    "bk-resource==0.4.11",
    "bkapi-bk-apigateway==1.0.11",
    "bkapi-client-core==1.2.0",
    "bkapi-component-open==2.1.0",
    "bkoauth==0.1.0",
    "blueapps==4.14.0",
    "cachetools==3.1.1",
    "celery==5.2.3",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "client-throttler==1.1.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "coreapi==2.3.3",
    "coreschema==0.0.4",
    "cryptography==44.0.1",
    "curlify==2.2.1",
    "dacite==1.9.2",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "django==3.2.23",
    "django-celery-beat==2.2.0",
    "django-celery-results==2.4.0",
    "django-cors-headers==3.7.0",
    "django-cors-middleware==1.3.1",
    "django-environ==0.10.0",
    "django-filter==2.4.0",
    "django-prometheus==2.2.0",
    "django-redis==5.2.0",
    "django-rest-framework-condition==0.1.1",
    "django-simpleui==2023.3.1",
    "django-sslserver==0.22",
    "django-timezone-field==4.2.3",
    "djangorestframework==3.12.4",
    "drf-spectacular==0.12.0",
    "drf-yasg==1.20.0",
    "elasticsearch==7.17.9",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "future==0.18.2",
    "googleapis-common-protos==1.56.2",
    "grpcio==1.70.0",
    "gunicorn==22.0.0",
    "idna==3.10",
    "importlib-metadata==6.11.0",
    "inflection==0.5.1",
    "ipython==8.10.0",
    "itypes==1.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.5",
    "json-log-formatter==0.4.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "kafka-python==2.0.2",
    "kombu==5.4.2",
    "mako==1.3.9",
    "markupsafe==2.1.5",
    "matplotlib-inline==0.1.7",
    "mistune==2.0.3",
    "numpy==1.24.2",
    "openpyxl==3.1.2",
    "opentelemetry-api==1.20.0",
    "opentelemetry-exporter-jaeger==1.20.0",
    "opentelemetry-exporter-jaeger-proto-grpc==1.20.0",
    "opentelemetry-exporter-jaeger-thrift==1.20.0",
    "opentelemetry-exporter-otlp==1.20.0",
    "opentelemetry-exporter-otlp-proto-common==1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.20.0",
    "opentelemetry-exporter-otlp-proto-http==1.20.0",
    "opentelemetry-instrumentation==0.41b0",
    "opentelemetry-instrumentation-celery==0.41b0",
    "opentelemetry-instrumentation-dbapi==0.41b0",
    "opentelemetry-instrumentation-django==0.41b0",
    "opentelemetry-instrumentation-logging==0.41b0",
    "opentelemetry-instrumentation-redis==0.41b0",
    "opentelemetry-instrumentation-requests==0.41b0",
    "opentelemetry-instrumentation-wsgi==0.41b0",
    "opentelemetry-proto==1.20.0",
    "opentelemetry-sdk==1.20.0",
    "opentelemetry-semantic-conventions==0.41b0",
    "opentelemetry-util-http==0.41b0",
    "packaging==24.2",
    "parso==0.8.4",
    "pexpect==4.9.0 ; sys_platform != 'win32'",
    "pickleshare==0.7.5",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.50",
    "protobuf==3.19.5",
    "ptyprocess==0.7.0 ; sys_platform != 'win32'",
    "pure-eval==0.2.3",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pycryptodomex==3.21.0",
    "pydantic==2.10.4",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyinstrument==3.4.2",
    "pyinstrument-cext==0.2.4",
    "pyjwt==2.10.1",
    "pymysql==1.1.1",
    "pypika==0.48.9",
    "pypinyin==0.49.0",
    "python-crontab==3.2.0",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pytz==2025.1",
    "pyyaml==6.0",
    "raven==6.10.0",
    "redis==3.5.3",
    "referencing==0.36.2",
    "requests==2.31.0",
    "rpds-py==0.23.1",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12 ; platform_python_implementation == 'CPython'",
    "sentry-sdk==1.28.1",
    "setuptools==59.6.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "stack-data==0.6.3",
    "thrift==0.21.0",
    "tongsuopy-crayon==1.0.2b6",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uritemplate==4.1.1",
    "urllib3==1.26.20",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "werkzeug==2.3.8",
    "whitenoise==5.2.0",
    "wrapt==1.17.2",
    "zipp==3.21.0",
]

[dependency-groups]
dev = [
    "appdirs==1.4.4",
    "aspy-refactor-imports==3.0.2",
    "atomicwrites==1.4.1 ; sys_platform == 'win32'",
    "attrs==25.1.0",
    "cfgv==3.4.0",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "coverage==6.2",
    "distlib==0.3.9",
    "entrypoints==0.3",
    "execnet==2.1.1",
    "filelock==3.17.0",
    "flake8==3.7.8",
    "identify==2.6.8",
    "iniconfig==2.0.0",
    "mccabe==0.6.1",
    "nodeenv==1.9.1",
    "packaging==24.2",
    "pbr==6.1.1",
    "pluggy==1.5.0",
    "pre-commit==2.9.2",
    "py==1.11.0",
    "pycodestyle==2.5.0",
    "pyflakes==2.1.1",
    "pyparsing==2.2.0",
    "pytest==6.2.5",
    "pytest-cov==3.0.0",
    "pytest-django==4.4.0",
    "pytest-forked==1.6.0",
    "pytest-html==3.1.1",
    "pytest-metadata==2.0.4",
    "pytest-xdist==2.4.0",
    "pyyaml==6.0",
    "seed-isort-config==1.9.2",
    "setuptools==59.6.0",
    "six==1.17.0",
    "stevedore==5.4.1",
    "toml==0.10.2",
    "tomli==2.2.1",
    "virtualenv==20.0.8",
    "virtualenv-clone==0.2.6",
    "virtualenvwrapper==4.7.1",
    "xmlrunner==1.7.7",
]
